<resources>
    <string name="app_name">bActivity</string>
    <string name="my_name">HXL</string>
    <string name="first_long">打开Shortcuts页面</string>
    <string name="first_short">打开Shortcuts</string>
    <string name="second_long">打开登录页面</string>
    <string name="second_short">打开Login</string>
    <string name="third_long">打开完成页面</string>
    <string name="third_short">打开Finish</string>
</resources>